CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(HELLO)

MESSAGE(STATUS "CMAKE_BINARY_DIR=${CMAKE_BINARY_DIR}")
MESSAGE(STATUS "PROJECT_BINARY_DIR=${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "HELLO_BINARY_DIR=${HELLO_BINARY_DIR}")

MESSAGE(STATUS "CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "PROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "HELLO_SOURCE_DIR=${HELLO_SOURCE_DIR}")

MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}")

MESSAGE(STATUS "CMAKE_CURRENT_LIST_FILE=${CMAKE_CURRENT_LIST_FILE}")
MESSAGE(STATUS "CMAKE_CURRENT_LIST_LINE=${CMAKE_CURRENT_LIST_LINE}")

MESSAGE(STATUS "PROJECT_NAME=${PROJECT_NAME}")

MESSAGE(STATUS "JAVA_HOME=$ENV{JAVA_HOME}")
MESSAGE(STATUS "TAIHEJIN_HOME=$ENV{TAIHEJIN_HOME}")
SET(ENV{TAIHEIN_HOME} /home/taihejin)
MESSAGE(STATUS "TAIHEJIN_HOME=$ENV{TAIHEJIN_HOME}")

MESSAGE(STATUS "CMAKE_MAJOR_VERSION=${CMAKE_MAJOR_VERSION}")
MESSAGE(STATUS "CMAKE_MINOR_VERSION=${CMAKE_MINOR_VERSION}")
MESSAGE(STATUS "CMAKE_PATCH_VERSION=${CMAKE_PATCH_VERSION}")
MESSAGE(STATUS "CMAKE_SYSTEM=${CMAKE_SYSTEM}")
MESSAGE(STATUS "CMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME}")
MESSAGE(STATUS "CMAKE_SYSTEM_VERSION=${CMAKE_SYSTEM_VERSION}")
MESSAGE(STATUS "CMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE(STATUS "UNIX=${UNIX}")
MESSAGE(STATUS "WIN32=${WIN32}")

ADD_SUBDIRECTORY(src)
