CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(HELLO)

IF("hello" MATCHES "ell")
  MESSAGE(STATUS "!!!true")
ENDIF("hello" MATCHES "ell")

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
IF(WIN32)
  MESSAGE(STATUS "This is WIN32")
ELSEIF(UNIX)
  MESSAGE(STATUS "This is UNIX")
ELSEIF(APPLE)
  MESSAGE(STATUS "This is APPLE")
ENDIF(WIN32)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
FOREACH(F ${SRC_LIST})
  MESSAGE(${F})
ENDFOREACH(F)

FOREACH(VAR RANGE 10)
  MESSAGE(${VAR})
ENDFOREACH(VAR)

FOREACH(VAR RANGE 5 15 3)
  MESSAGE(${VAR})
ENDFOREACH(VAR)
ADD_EXECUTABLE(main main.c)
