ADD_LIBRARY(hello SHARED hello.c)
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 5.6 SOVERSION 5)

ADD_LIBRARY(hello_static STATIC hello.c)
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME hello)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

INSTALL(TARGETS hello hello_static
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

INSTALL(FILES hello.h DESTINATION include/hello)
